refactor: EmbedRequestDto sort Fields Discord